Косметические фиксы полей редактирования, удаления и страницы авторизации

--- a/Dream/Views/Account/Login.cshtml
+++ b/Dream/Views/Account/Login.cshtml
@@ -29,9 +29,7 @@
                                         <button type="submit" class="mdl-button mdl-js-button mdl-js-ripple-effect">
                                             Выполнить вход
                                         </button>
-                                        <button formaction="@Url.Action("Register", "Account")" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                                            Регистрация нового пользователя
-                                        </button>
+                                        <a href="@Url.Action("Register", "Account")" class="mdl-button mdl-js-button mdl-js-ripple-effect">Регистрация нового пользователя</a>
                                     </div>
                                     @* Включите, когда будет включено подтверждение учетной записи для функции сброса пароля
                                         <p>
